[gd_scene load_steps=17 format=3 uid="uid://cv5ew33d7pvhc"]

[ext_resource type="Script" uid="uid://b41wpj34614un" path="res://scenes/shop_menu.gd" id="1_76m3e"]
[ext_resource type="Texture2D" uid="uid://c7rduhgk4woh6" path="res://assets/shop/arrow.png" id="2_cql4u"]
[ext_resource type="Texture2D" uid="uid://dsu2ijbg18kf" path="res://assets/items/ikonka_kable.png" id="3_xw4en"]
[ext_resource type="Texture2D" uid="uid://dxq2ttrx1r6wd" path="res://assets/monetka.png" id="4_bq4yc"]
[ext_resource type="Texture2D" uid="uid://whpc6jy7jkyv" path="res://assets/items/ikonka_karta_sd.png" id="4_xw4en"]
[ext_resource type="Texture2D" uid="uid://bupjcp6kq724i" path="res://assets/items/ikonka_usb.png" id="5_bq4yc"]
[ext_resource type="Texture2D" uid="uid://cportoh512tuq" path="res://scenes/player/sword.png" id="6_bq4yc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lngpu"]
atlas = ExtResource("2_cql4u")
region = Rect2(0, 0, 30, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgolc"]
atlas = ExtResource("2_cql4u")
region = Rect2(30, 0, 30, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_amlfo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lngpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgolc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tnh3q"]
atlas = ExtResource("2_cql4u")
region = Rect2(30, 0, 30, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_5gjx7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnh3q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rg5ak"]
atlas = ExtResource("3_xw4en")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_eqtrt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg5ak")
}],
"loop": true,
"name": &"Cable",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_xw4en")
}],
"loop": true,
"name": &"Card",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_bq4yc")
}],
"loop": true,
"name": &"Usb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_bq4yc")
}],
"loop": true,
"name": &"sword",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_h4m6t"]
atlas = ExtResource("4_bq4yc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_47k2f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4m6t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]
[gd_scene load_steps=0 format=3 uid="uid://cv5ew33d7pvhc"]

[node name="shop_menu" type="StaticBody2D"]
script = ExtResource("1_76m3e")

[node name="arrow_left" type="AnimatedSprite2D" parent="."]
position = Vector2(11, 45)
scale = Vector2(0.51666665, 0.4807692)
sprite_frames = SubResource("SpriteFrames_amlfo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 130.0
offset_bottom = 60.0
color = Color(1, 1, 1, 0.05490196)

[node name="Button_right" type="Button" parent="."]
modulate = Color(1.0384669, 1.0384669, 1.0384669, 0)
offset_left = 22.0
offset_top = 26.0
offset_right = 44.0
offset_bottom = 60.0

[node name="Buton_left" type="Button" parent="."]
modulate = Color(1.0020528, 1.0020528, 1.0020528, 0)
offset_top = 26.0
offset_right = 22.0
offset_bottom = 60.0

[node name="arrow_right" type="AnimatedSprite2D" parent="."]
modulate = Color(1.0015374, 1.0015374, 1.0015374, 1)
position = Vector2(32, 45)
scale = Vector2(0.48333338, 0.48076922)
sprite_frames = SubResource("SpriteFrames_5gjx7")

[node name="icon" type="AnimatedSprite2D" parent="."]
position = Vector2(21, 19)
sprite_frames = SubResource("SpriteFrames_eqtrt")
animation = &"sword"

[node name="coin" type="AnimatedSprite2D" parent="."]
position = Vector2(98, 20)
sprite_frames = SubResource("SpriteFrames_47k2f")

[node name="prince" type="RichTextLabel" parent="."]
offset_left = 52.0
offset_top = 9.0
offset_right = 92.0
offset_bottom = 49.0
text = "100"

[node name="Buybuttoncolor" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 48.0
offset_top = 38.0
offset_right = 122.0
offset_bottom = 54.0
color = Color(0.8887445, 0.069242366, 0.0748002, 1)

[node name="Buybutton" type="Button" parent="."]
modulate = Color(1, 0.29803923, 0.8, 1)
offset_left = 48.0
offset_top = 38.0
offset_right = 122.0
offset_bottom = 53.0

[connection signal="pressed" from="Button_right" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="Buton_left" to="." method="_on_buton_left_pressed"]
[connection signal="pressed" from="Buybutton" to="." method="_on_buybutton_pressed"]
